--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
         "@ngx-translate/core": "^6.0.1",
         "@ngx-translate/http-loader": "0.0.3",
         "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-app-update": "^1.3.9",
+        "cordova-plugin-appversion": "^1.0.0",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
@@ -66,10 +69,12 @@
             "phonegap-plugin-barcodescanner": {},
             "cordova-plugin-inappbrowser": {},
             "cordova-plugin-camera": {},
-            "cordova-plugin-file": {}
+            "cordova-plugin-file": {},
+            "cordova-plugin-app-update": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
